provant comm entre agents

--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Solution</title>
-	</head>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>ECSDI</title>
+  </head>
 	<body>
 		
         <div align="center">
