--- a/Agents/templates/mainPage.html
+++ b/Agents/templates/mainPage.html
@@ -12,6 +12,8 @@
         <form method="POST">
             <p>Ciudad origen:</p><input name="ciudadOrigen">
             <p>Ciudad destino:</p><input name="ciudadDestino">
+            <p>Data ida (Format YYYY-MM-DD):</p><input name="dataIda">
+            <p>Data vuelta (Format YYYY-MM-DD):</p><input name="dataVuelta">
             <p>Precio maximo:</p><input name="maxPrecio">
             <p>Precio minimo:</p><input name="minPrecio">
             <p>Estrellas hotel:</p><input name="estrellas">
