--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -13,6 +13,8 @@
         <h3> Hoteles</h3>
 		    <p> Ciudad origen: {{  hotelData.ciudadOrigen }} </p>
 		    <p> Ciudad destino: {{  hotelData.ciudadDestino }} </p>
+        <p> Data ida: {{  hotelData.dataIda }} </p>
+		    <p> Data vuelta: {{  hotelData.dataVuelta }} </p>
 		    <p> Precio maximo:{{  hotelData.maxPrecio }} </p>
         <p> Precio minimo:{{  hotelData.minPrecio }} </p>
 		    <p> Estrellas: {{  hotelData.estrellas }} </p>
