imprimir per pantalla un hotel random

--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -18,6 +18,7 @@
 		    <p> Precio maximo:{{  hotelData.maxPrecio }} </p>
         <p> Precio minimo:{{  hotelData.minPrecio }} </p>
 		    <p> Estrellas: {{  hotelData.estrellas }} </p>
+        <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
       </div>
 	</body>
 </html>
