implementacio varie ciutats

--- a/Agents/templates/mainPage.html
+++ b/Agents/templates/mainPage.html
@@ -14,10 +14,11 @@
             <p>Ciudad destino:</p><input name="ciudadDestino">
             <p>Data ida (Format YYYY-MM-DD):</p><input name="dataIda">
             <p>Data vuelta (Format YYYY-MM-DD):</p><input name="dataVuelta">
-            <p>Precio maximo:</p><input name="maxPrecio">
-            <p>Precio minimo:</p><input name="minPrecio">
+            <p>Precio hotel:</p><input name="precioHotel">
             <p>Estrellas hotel:</p><input name="estrellas">
-            <p></p>
+            <p>Numero habitaciones:</p><input name="roomQuantity">
+            <p>Adultos:</p><input name="adults">
+            <p>Distancia del centro(KM):</p><input name="radius">
             <input type="submit">
         </form>
       </div>
