--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -15,9 +15,11 @@
 		    <p> Ciudad destino: {{  hotelData.ciudadDestino }} </p>
         <p> Data ida: {{  hotelData.dataIda }} </p>
 		    <p> Data vuelta: {{  hotelData.dataVuelta }} </p>
-		    <p> Precio maximo:{{  hotelData.maxPrecio }} </p>
-        <p> Precio minimo:{{  hotelData.minPrecio }} </p>
+		    <p> Precio maximo:{{  hotelData.precioHotel }} </p>
 		    <p> Estrellas: {{  hotelData.estrellas }} </p>
+        <p> Estrellas: {{  hotelData.roomQuantity }} </p>
+        <p> Estrellas: {{  hotelData.adults }} </p>
+        <p> Estrellas: {{  hotelData.radius }} </p>
         <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
       </div>
 	</body>
