--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -19,6 +19,7 @@
             <h3> Hotel</h3>
             <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
             <p> Dirección hotel: {{  hotelData.direccion }} </p>
+            <p> Nombre actividad: {{  hotelData.nombreActividad }} </p>
           {% else %}
             <p> {{ hotelData.errorMessage }} </p>
           {% endif %}
