--- a/Agents/templates/mainPage.html
+++ b/Agents/templates/mainPage.html
@@ -10,15 +10,15 @@
       <div align="center">
         <h1>Planificador de viajes</h1>
         <form method="POST">
-            <p>Ciudad origen:</p><input name="ciudadOrigen">
-            <p>Ciudad destino:</p><input name="ciudadDestino">
-            <p>Data ida (Format YYYY-MM-DD):</p><input name="dataIda">
-            <p>Data vuelta (Format YYYY-MM-DD):</p><input name="dataVuelta">
-            <p>Precio hotel:</p><input name="precioHotel">
-            <p>Estrellas hotel:</p><input name="estrellas">
-            <p>Numero habitaciones:</p><input name="roomQuantity">
-            <p>Adultos:</p><input name="adults">
-            <p>Distancia del centro(KM):</p><input name="radius">
+            <p>Ciudad origen:</p><input name="ciudadOrigen" required>
+            <p>Ciudad destino:</p><input name="ciudadDestino" required>
+            <p>Data ida (Format YYYY-MM-DD):</p><input name="dataIda" required>
+            <p>Data vuelta (Format YYYY-MM-DD):</p><input name="dataVuelta" required>
+            <p>Precio hotel:</p><input name="precioHotel" required>
+            <p>Estrellas hotel:</p><input name="estrellas" required>
+            <p>Numero habitaciones:</p><input name="roomQuantity" required>
+            <p>Adultos:</p><input name="adults" required>
+            <p>Distancia del centro(KM):</p><input name="radius" required>
             <input type="submit">
         </form>
       </div>
