--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -18,6 +18,7 @@
             <p> Data vuelta: {{  hotelData.dataVuelta }} </p>
             <h3> Hotel</h3>
             <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
+            <p> Dirección hotel: {{  hotelData.direccion }} </p>
           {% else %}
             <p> {{ hotelData.errorMessage }} </p>
           {% endif %}
