preparant unificador per transport

--- a/Agents/templates/mainPage.html
+++ b/Agents/templates/mainPage.html
@@ -19,6 +19,7 @@
             <p>Numero habitaciones:</p><input name="roomQuantity" required>
             <p>Adultos:</p><input name="adults" required>
             <p>Distancia del centro(KM):</p><input name="radius" required>
+            <p>Presupuesto:</p><input name="budget" required>
             <input type="submit">
         </form>
       </div>
