--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -12,13 +12,15 @@
 		    <!-- INFORMACION DE LOS HOTELES --> 
         <div>
           {% if hotelData.error == 0 %}
+            <h3> Transporte </h3>
             <p> Ciudad origen: {{  hotelData.ciudadOrigen }} </p>
             <p> Ciudad destino: {{  hotelData.ciudadDestino }} </p>
             <p> Data ida: {{  hotelData.dataIda }} </p>
             <p> Data vuelta: {{  hotelData.dataVuelta }} </p>
-            <h3> Hotel</h3>
+            <h3> Hotel </h3>
             <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
             <p> Dirección hotel: {{  hotelData.direccion }} </p>
+            <h3> Actividades </h3>
             <p> Nombre actividad: {{  hotelData.nombreActividad }} </p>
           {% else %}
             <p> {{ hotelData.errorMessage }} </p>
