--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -15,8 +15,8 @@
             <h3> Transporte </h3>
             <p> Ciudad origen: {{  hotelData.ciudadOrigen }} </p>
             <p> Ciudad destino: {{  hotelData.ciudadDestino }} </p>
-            <p> Data ida: {{  hotelData.dataIda }} </p>
-            <p> Data vuelta: {{  hotelData.dataVuelta }} </p>
+            <p> Fecha ida: {{  hotelData.fechaIda }} </p>
+            <p> Fecha vuelta: {{  hotelData.fechaVuelta }} </p>
             <h3> Hotel </h3>
             <p> Nombre hotel: {{  hotelData.nombreHotel }} </p>
             <p> Dirección hotel: {{  hotelData.direccion }} </p>
