Fixing bug on retrieving activity

--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -23,6 +23,7 @@
             <h3> Actividades </h3>
             <p> Nombre actividad: {{  displayData.nombreActividad }} </p>
           {% else %}
+          <h3> Error </h3>
             <p> {{ displayData.errorMessage }} </p>
           {% endif %}
         </div>
