--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -37,7 +37,7 @@
             <div>
                 <p><b>Nombre hotel: </b>{{  displayData.nombreAloj }}</p>
                 <p><b>Dirección hotel: </b>{{  displayData.direccionAloj }}</p>
-                <p><b>Precio: </b> €</p>
+                <p><b>Precio: </b> {{  displayData.precioAloj }}</p>
             </div>
 
             <h2>Actividades</h2>
