Returning multiple activities.

--- a/Agents/templates/processingPlan.html
+++ b/Agents/templates/processingPlan.html
@@ -42,7 +42,9 @@
 
             <h2>Actividades</h2>
             <div>
-                <p><b>Nombre actividad: </b>{{  displayData.nombreActividad }}</p>
+                <p><b>Actividades de mañana: </b>{{  displayData.actividadesManana }}</p>
+                <p><b>Actividades de tarde: </b>{{  displayData.actividadesTarde }}</p>
+                <p><b>Actividades de noche: </b>{{  displayData.actividadesNoche }}</p>
             </div>
 
         {% else %}
